--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,16 +56,8 @@ body{
    background: rgb(64,161,179);
 }
 
-/* .sub-header {
-   position: sticky;
-   width: 100%;
-   height: 30vh;
-   top: 0px;
-   background: rgb(64,161,179);
-} */
-
 .nav-container {
-   background: yellow;
+   background: rgb(20,62,98);
    position: sticky;
    top: 0px;
    height: 5vh;
@@ -83,7 +75,7 @@ body{
 }
 
 .header-nav a {
-   color: black;  
+   color: white;  
    text-decoration: none;
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
@@ -95,22 +87,23 @@ body{
 }
 
 .header-nav a:hover {
-   background: rgb(131, 206, 131);
-   
-   /* padding: 5px 10px; */
+   background: rgb(64,161,179);
+   }
+
+.logo {
+   width: 5vw;
+   margin-right: 2vw;
 }
 
 .header-tittle-container {
    height: 100%;
-   /* background: red; */
    display: flex;
-   flex-direction: column;
    align-items: center;
    justify-content: center;
 }
 
 .header-tittle {
-   /* text-decoration: underline; */
+
    font-family: 'Montserrat', sans-serif;
    font-size: 50px;
 }
@@ -122,10 +115,11 @@ body{
 
 
 .img-container {
-   /* width: 100%;
-   background: url('../img/perros-jugando-juguetes.jpg') no-repeat ;
+   width: 100%;
+   background: url('../img/perros-jugando-juguetes.jpg') fixed ;
+   background-position: bottom center;
    background-size: cover;
-   height: 100vh; */
+   height: 40vh;
 }
 
 
@@ -356,8 +350,8 @@ body{
 
 .footer{
    width: 100%;
-   height: 40vh;
-   background: rgb(170,161,37);
+   height: 28vh;
+   background: rgb(37,37,37);
 }
 
 .footer-main {
@@ -369,7 +363,6 @@ body{
    justify-content: space-between ;
    align-items: center;
    margin: 0 auto;
-
 }
 
 .flecha-icon {
@@ -377,12 +370,12 @@ body{
 }
 
 .socialMedia-container{
-   /* background: green; */
    text-align: center;
    width: 30vw;
 }
 
 .socialMedia-tittle {
+   color: rgb(204,204,204);
    font-size: 50px ;
    font-family: 'Raleway', sans-serif;
 }
@@ -393,6 +386,13 @@ body{
 
 .footer-nav a img{
    width: 40px;
+}
+
+.footer-text {
+   /* font-size: 410px; */
+   /* color: rgb(105, 71, 157); */
+   /* color: white; */
+   color: rgb(204,204,204);
 }
 
 
@@ -584,34 +584,67 @@ body{
     ============================================= CONTACT ===================================
     ========================================================================================= */
 
-.contact-form {
+.form-section{
+   width: 100%;
    background: rgb(44,205,197);
+}
+
+.contact-form {
+   margin: 0 auto;
+   /* background: pink; */
    display: flex;
    flex-direction: column;
    align-items: center;
-   height: 80vh;
+   width: 600px;
+   height: 60vh;
    /* height: 40vh; */
    /* display: flex; */
+}
+
+.contact-tittle-container {
+   /* background: green; */
+   color: white;
+   width: 33vw;
+   margin: 0 auto;
+}
+
+.contact-tittle{
+   font-size: 40px;
 }
 
 .form-main {
    display: flex;
    justify-content: space-between;
+   /* background: red; */
    /* margin: 0 auto; */
-   width: 33vw;
-   height: 33vh;
+   width: 100%;
+   height: 30vh;
    /* border: 2px solid; */
 }
 
 .left-form {
    display: flex;
    flex-direction: column;
+   justify-content: space-between;
+   /* background: yellow; */
+   width: 46%;
 }
 
 .right-form {
+   width: 46%;
    /* background: pink; */
    display: flex;
    flex-direction: column;
+   justify-content: space-between;
+
+}
+
+.input-container {
+   display: flex;
+   flex-direction: column;
+   /* background: green; */
+   height: 80px;
+   /* margin: 2px; */
 }
 
 .contact-label {
@@ -619,19 +652,28 @@ body{
 }
 
 .contact-input {
-   border: none;
+   border: 1px solid rgb(199, 199, 199);
    outline: none;
    border-radius: 7px;
-   width: 15vw;
-   height: 5vh;
-   margin-bottom: 4vh;
+   width: 100%;
+   height: 4vh;
+   /* margin-bottom: 4vh; */
+}
+
+.error-message{
+   color: red;
+   display: none;
 }
 
 .coments-container {
-   width: 33vw;
+   width: 100%;
    /* background: green; */
    display: flex;
    flex-direction: column;
+}
+
+.comments-label {
+   font-size: 20px;
 }
 
 .coments-input {
@@ -644,7 +686,7 @@ body{
 
 .sendButton-container {
    /* background: lightblue; */
-   width: 35vw;
+   width: 100%;
    display: flex;
    justify-content:flex-end;
 }
@@ -652,6 +694,7 @@ body{
 .send-button {
    width: 37%;
    height: 3vh;
+   margin-top: 2vh;
 }
 
 .send-button {
