--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,10 +53,12 @@ body{
    width: 100%;
    height: 15vh;
    top: 0px;
+   /* background: ; */
    background: rgb(64,161,179);
 }
 
 .nav-container {
+   /* background: rgb(12,80,105); */
    background: rgb(20,62,98);
    position: sticky;
    top: 0px;
@@ -489,9 +491,9 @@ body{
    box-shadow: 0px 10px 20px rgb(126, 126, 126);
 }
 
-.nuevaClassName {
+/* .nuevaClassName {
    background: ;
-}
+} */
 
 .carrito-icon-container {
    display: none;
@@ -682,9 +684,11 @@ body{
 .form-section{
    width: 100%;
    background: rgb(44,205,197);
+   /* margin-top: 20vh 0; */
 }
 
 .contact-form {
+   padding-top: 10vh ;
    margin: 0 auto;
    /* background: pink; */
    display: flex;
@@ -755,9 +759,12 @@ body{
    /* margin-bottom: 4vh; */
 }
 
+
 .error-message{
    color: red;
    display: none;
+   font-family: "Open-sans";
+   font-weight: bold;
 }
 
 .coments-container {
@@ -777,6 +784,8 @@ body{
    border: none;
    outline: none;
    border-radius: 7px;
+   font-size: 16px;
+   resize: none;
 }
 
 .sendButton-container {
@@ -788,12 +797,20 @@ body{
 
 .send-button {
    width: 37%;
-   height: 3vh;
+   height: 4vh;
    margin-top: 2vh;
+   background: rgb(59,69,81);
+   border-radius: 7px;
+   outline: none;
+   border: none;
+   color: white;
+   font-size: 15px;
+   transition: all .3s ease;
 }
 
-.send-button {
+.send-button:hover {
    cursor: pointer;
+   width: 39%;
 }
 
 
