--- a/playground/styles.css
+++ b/playground/styles.css
@@ -3,54 +3,35 @@
    padding: 0;
 }
 
-div {
-   /* background: green; */
+.container {
    display: flex;
-   height: 15vh;
-   align-items: flex-end;
-   justify-content: space-evenly;
-   width: 25vw;
-
 }
 
-.play-button {
-   padding: 5px 20px;
-   display: block;
-
-}
-
-a {
-   background: grey;
-   /* margin: 50px; */
-   width: 8vw;
-   height: 3vh;
-   font-size: 25px;
+.left {
+   width: 50vw;
+   height: 100vh;
+   background: pink;
    text-align: center;
-   padding: 20px;
-   display: block;
-   text-decoration: none;
-   color: black;
-   border-radius: 5px;
-   transition: all .1s ease;
-   font-family:  sans-serif;
 }
 
-a:hover {
-   background: rgba(128, 128, 128, 0.671);
+
+.right {
+   width: 50vw;
+   height: 100vh;
+   background: plum;
+   text-align: center;
 }
 
-.score {
+.familiar {
    background: red;
-   width: 10vw;
-   height: 5vh;
-   border-radius: 4px;
-   font-size: 25px;
-   font-family: sans-serif;
-   padding: 0px 30px 20px 15px;
+   color: white;
+   padding: 10px;
+   width: 150px;
+   margin: 10px;
+   font-size: 20px;
+   cursor: pointer;
 }
 
-.remaining-time {
-   font-family: sans-serif;
-   margin: 20px;
-   font-size: 20px;
+.familiar:hover {
+   cursor: pointer;
 }
